BOOKING-165: Prepared code
